--- a/code/resources/assets/scss/utilities/_variables.scss
+++ b/code/resources/assets/scss/utilities/_variables.scss
@@ -365,7 +365,7 @@ $titlebar-color:        $toolbar-color !default;
 $overflow-size:     6px !default;
 $overflow-blur:     $overflow-size * 2 !default;
 $overflow-offset:   -($overflow-size) !default;
-$overflow-color:    rgba(0,0,0,.66) !default;
+$overflow-color:    rgba(0,0,0,.25) !default;
 
 
 // Form layout
